REGRESSION(181868): Windows Live SkyDrive cannot open an excel file https://bugs.webkit.org/show_bug.cgi?id=144373

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-04-29
Reviewed by Darin Adler.

Source/JavaScriptCore:

Revert r181868 as it caused a failure on live.com. We can try
re-enabling this exception after we make idl attributes configurable,
which may have prevented this particular failure.

* runtime/ObjectPrototype.cpp:
(JSC::objectProtoFuncDefineGetter):
(JSC::objectProtoFuncDefineSetter):

LayoutTests:

* js/property-getters-and-setters-expected.txt:
* js/script-tests/property-getters-and-setters.js:

Canonical link: https://commits.webkit.org/162380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183535 268f45cc-cd09-0410-ab3c-d52691b4dbfc